--- a/Mano/templates/index.html
+++ b/Mano/templates/index.html
@@ -184,8 +184,9 @@
                 Dashboard
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="index2.html">Life style Info</a>
+                <a class="dropdown-item" href="index2.html">Lifestyle Info</a>
                 <a class="dropdown-item" href="index1.html">Info Based on Age</a>
+
               </div>
             </li>
             <li class="nav-item">
@@ -200,7 +201,9 @@
     <div class="row">
       <div class="col-md-10">
         <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
-        <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
+        <div class="container">
+            <div class="text" style="color: rgb(13, 184, 167); font-weight: bold;"></div>
+        </div>
       </div>
     </div>
 </div>
@@ -212,8 +215,12 @@
       </div>
       <div class="col-md-2">
       <article class="description-content">
+          <br>
+          <br>
+          <br>
+          <br>
         <hr>
-        <h3>Team Members</h3>
+        <h3 style="color: #fc2a62;">Team Members</h3>
         <hr>
         <ul>
             <li>Sally Ahmed</li>
@@ -249,6 +256,7 @@
 <script src="../static/js/app.js"></script>
 <script src="../static/js/app3.js"></script>
 <script src="../static/js/app4.js"></script>
+<script src="../static/js/anime.js"></script>
 
 </body>
 
