--- a/Mano/templates/summary.html
+++ b/Mano/templates/summary.html
@@ -36,7 +36,7 @@
               Dashboard
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="index2.html">Life style Info</a>
+              <a class="dropdown-item" href="index2.html">Lifestyle Info</a>
               <a class="dropdown-item" href="index1.html">Info Based on Age</a>
             </div>
           </li>
@@ -92,42 +92,48 @@
     </style>
     <div class="container-fluid p-5">
       <div class="row">
-          <div class="col-md-12" align ="center">
-            <p style="text-align: center;">The following table summarizes the profile of a typical male and female by aggregating the most common responses for each category.</p>
-            <br>
-            <p style="text-align: center;">Much data remains the same across gender, except for height, religion, sign, job and body type.</p>
-            <img src="../static/images/summary.png" class="img-fluid" alt="dating" width="700" height="600">
-          </div>
+        <div class="col-md-12" align="center">
+          <p style="text-align: center;">The following table summarizes the profile of a typical male and female by
+            aggregating the most common responses for each category.</p>
+          <br>
+          <p style="text-align: center;">Much data remains the same across gender, except for height, religion, sign,
+            job and body type.</p>
+          <img src="../static/images/summary.png" class="img-fluid" alt="dating" width="700" height="600">
         </div>
-        <div class="row">
-          <div class="col-md-6">
-          <article class="description-content">
+      </div>
+      <div class="row">
+        <div class="col-md-12" align="center">
+          <article class="description-content text-center">
             <br>
             <hr>
-            FUTURE DIRECTIONS:
+            <h1 style="color: blueviolet;">FUTURE DIRECTIONS:</h1>
             <hr>
             <ul>
-              <li>Look deeper into the discrepancies of income based on gender, ethnicity and age. </li>
+              <p>=> Look deeper into the discrepancies of income based on gender, ethnicity and age. </p>
 
-              <li> Perform statistical analysis of drinking habits based on age and income. </li>
-                
-              <li>More modeling opportunities that the data presents.</li>
+              <p>=> Perform statistical analysis of drinking habits based on age and income. </p>
+
+              <p>=> More modeling opportunities that the data presents.</p>
             </ul>
-
           </article>
-          </div>
-            
         </div>
       </div>
     </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="../static/js/anime.js"></script>
-<script src="../static/js/app.js"></script>
-<script src="../static/js/app3.js"></script>
-<script src="../static/js/app4.js"></script>
 
-</body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
+    <script src="../static/js/anime.js"></script>
+    <script src="../static/js/app.js"></script>
+    <script src="../static/js/app3.js"></script>
+    <script src="../static/js/app4.js"></script>
 
-</html>  
+  </body>
+
+</html>
