--- a/Mano/templates/index.html
+++ b/Mano/templates/index.html
@@ -185,6 +185,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="index2.html">Lifestyle Info</a>
+                <a class="dropdown-item" href="amcharts.html">Zodiac Info</a>
                 <a class="dropdown-item" href="index1.html">Info Based on Age</a>
 
               </div>
@@ -202,7 +203,7 @@
       <div class="col-md-10">
         <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
         <div class="container">
-            <div class="text" style="color: rgb(13, 184, 167); font-weight: bold;"></div>
+            <div class="text" style="color: rgb(13, 33, 184); font-weight: bold;"></div>
         </div>
       </div>
     </div>
@@ -257,6 +258,7 @@
 <script src="../static/js/app3.js"></script>
 <script src="../static/js/app4.js"></script>
 <script src="../static/js/anime.js"></script>
+<script src="../static/js/amcharts.js"></script>
 
 </body>
 
