--- a/Mano/templates/index2.html
+++ b/Mano/templates/index2.html
@@ -49,6 +49,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="index2.html">Lifestyle Info</a>
+              <a class="dropdown-item" href="amcharts.html">Zodiac Info</a>
               <a class="dropdown-item" href="index1.html">Info Based on Age</a>
             </div>
         </li>
