--- a/Mano/templates/summary.html
+++ b/Mano/templates/summary.html
@@ -37,6 +37,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="index2.html">Lifestyle Info</a>
+              <a class="dropdown-item" href="amcharts.html">Zodiac Info</a>
               <a class="dropdown-item" href="index1.html">Info Based on Age</a>
             </div>
           </li>
@@ -133,6 +134,7 @@
     <script src="../static/js/app.js"></script>
     <script src="../static/js/app3.js"></script>
     <script src="../static/js/app4.js"></script>
+    <script src="../static/js/amcharts.js"></script>
 
   </body>
 
