--- a/Mano/templates/comparison.html
+++ b/Mano/templates/comparison.html
@@ -49,6 +49,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="index2.html">Life style Info</a>
+                <a class="dropdown-item" href="amcharts.html">Zodiac Info</a>
                 <a class="dropdown-item" href="index1.html">Info Based on Age</a>
               </div>
           </li>
@@ -138,6 +139,7 @@
   <script src="../static/js/app.js"></script>
   <script src="../static/js/app3.js"></script>
   <script src="../static/js/app4.js"></script>
+  <script src="../static/js/amcharts.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
