--- a/Mano/templates/index2.html
+++ b/Mano/templates/index2.html
@@ -78,7 +78,7 @@
     <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
   </div>
     <div class="row">
-      <div class="col-md-12 jumbotron text-center"></div>
+      <div class="col-md-4"></div>
         <div class="well">
           <h5>Profile Info.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)">
@@ -93,25 +93,10 @@
             <option value="sex">Sex</option>
           </select>
         </div>
-        <!-- <div class="panel panel-primary">
-          <div class="panel-heading"> -->
-            <!-- <h3 class="panel-title">Demographic Info</h3> -->
-          <!-- </div> -->
-          <div id="sample-metadata" class="panel-body"></div>
-        </div>
-      </div>
-      <div class="col-md-5">
+        
+      <div class="col-md-12">
         <div id="bar"></div>
       </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
-      </div>
-    </div>
   </div>
   
   <script src="https://d3js.org/d3.v5.min.js"></script>
